@@ -1,18 +1,19 @@
 package com.tim.appTim.service;
 
-
 import com.tim.appTim.dto.*;
 import com.tim.appTim.entity.*;
-
 import com.tim.appTim.exception.ForbiddenException;
 import com.tim.appTim.exception.ResourceNotFoundException;
 import com.tim.appTim.repository.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -21,6 +22,8 @@ import java.util.stream.Collectors;
 
 @Service
 public class GradeServiceImpl implements GradeService {
+
+    private static final Logger logger = LoggerFactory.getLogger(GradeServiceImpl.class);
 
     private final GradeRepository gradeRepository;
     private final ClassMemberRepository classMemberRepository;
@@ -47,63 +50,163 @@ public class GradeServiceImpl implements GradeService {
     }
 
     @Override
-    public List<StudentGradeDTO> getMyGrades(Long classModuleId, Long studentId) {
-        validateStudentMembership(classModuleId, studentId);
-        return gradeRepository.findGradesForStudent(classModuleId, studentId);
+    @Transactional
+    public void batchCreateOrUpdateGrades(BatchGradeUpdateDTO dto, User teacher) {
+
+        Long classModuleId = dto.getClassModuleId();
+        LocalDate entryDate = dto.getEntryDate();
+
+        validateTeacherPermission(classModuleId, teacher.getId());
+
+        ClassModule classModule = classModuleRepository.findById(classModuleId)
+                .orElseThrow(() -> new ResourceNotFoundException("ClassModule not found: " + classModuleId));
+        String moduleName = classModule.getModule().getName();
+
+        for (StudentScoreEntryDTO studentEntry : dto.getScores()) {
+
+            Long studentId = studentEntry.getStudentId();
+            User student = userRepository.findById(studentId)
+                    .orElseThrow(() -> new ResourceNotFoundException("Student not found: " + studentId));
+
+            Map<String, BigDecimal> scoresMap = studentEntry.getComponents();
+            BigDecimal newTheoryScore = scoresMap.get("Điểm lý thuyết");
+            BigDecimal newPracticeScore = scoresMap.get("Điểm thực hành");
+
+            Optional<Grade> existingGradeOpt = gradeRepository
+                    .findByStudentIdAndClassModuleIdAndStatus(studentId, classModuleId, Grade.Status.ACTIVE);
+
+            Grade grade;
+            boolean isNewGrade = existingGradeOpt.isEmpty();
+
+            if (isNewGrade) {
+                grade = new Grade();
+                grade.setStudent(student);
+                grade.setClassModule(classModule);
+            } else {
+                grade = existingGradeOpt.get();
+            }
+
+            BigDecimal oldTheoryScore = grade.getTheoryScore();
+            BigDecimal oldPracticeScore = grade.getPracticeScore();
+            LocalDate oldEntryDate = grade.getEntryDate();
+
+            grade.setEnteredBy(teacher);
+            grade.setEntryDate(entryDate);
+            grade.setTheoryScore(newTheoryScore);
+            grade.setPracticeScore(newPracticeScore);
+
+            Grade savedGrade = gradeRepository.save(grade);
+
+            if (isNewGrade || (newTheoryScore != null && !newTheoryScore.equals(oldTheoryScore))) {
+                Notification.NotificationType type = (isNewGrade || oldTheoryScore == null) ?
+                        Notification.NotificationType.GRADE_NEW : Notification.NotificationType.GRADE_UPDATED;
+
+                saveHistoryAndNotify(savedGrade, "Điểm lý thuyết", oldTheoryScore, newTheoryScore,
+                        teacher, student, moduleName, type);
+            }
+
+            if (isNewGrade || (newPracticeScore != null && !newPracticeScore.equals(oldPracticeScore))) {
+                Notification.NotificationType type = (isNewGrade || oldPracticeScore == null) ?
+                        Notification.NotificationType.GRADE_NEW : Notification.NotificationType.GRADE_UPDATED;
+
+                saveHistoryAndNotify(savedGrade, "Điểm thực hành", oldPracticeScore, newPracticeScore,
+                        teacher, student, moduleName, type);
+            }
+
+            if (entryDate != null && !entryDate.equals(oldEntryDate)) {
+                GradeHistory history = new GradeHistory();
+                history.setGrade(savedGrade);
+                history.setComponentChanged("entry_date");
+                history.setChangedBy(teacher);
+                gradeHistoryRepository.save(history);
+            }
+        }
     }
 
-    @Override
-    public List<StudentGradeDTO> getStudentGrades(Long classModuleId, Long studentId) {
-        return gradeRepository.findGradesForTeacher(classModuleId, studentId);
+    private void saveHistoryAndNotify(Grade savedGrade, String componentName,
+                                      BigDecimal oldScore, BigDecimal newScore,
+                                      User teacher, User student, String moduleName,
+                                      Notification.NotificationType type) {
+
+        GradeHistory history = new GradeHistory();
+        history.setGrade(savedGrade);
+        history.setComponentChanged(componentName);
+        history.setOldScore(oldScore);
+        history.setNewScore(newScore);
+        history.setChangedBy(teacher);
+        gradeHistoryRepository.save(history);
+
+        sendGradeNotification(teacher, student, moduleName, componentName, newScore,
+                savedGrade.getClassModule().getId(), savedGrade.getId(), type);
+    }
+
+    private void sendGradeNotification(User teacher, User student, String moduleName,
+                                       String componentName, BigDecimal score, Long classModuleId,
+                                       Long gradeId, Notification.NotificationType type) {
+        try {
+            String title = (type == Notification.NotificationType.GRADE_NEW) ? "Bạn có điểm mới" : "Điểm của bạn đã được cập nhật";
+            String content = String.format(
+                    "Bạn có điểm [ %s ] môn [ %s ]: %.1f",
+                    componentName, moduleName, (score != null ? score : 0)
+            );
+
+            notificationService.createNotification(
+                    student.getId(),
+                    teacher.getId(),
+                    type,
+                    "CLASS_MODULE",
+                    classModuleId,
+                    title,
+                    content
+            );
+        } catch (Exception e) {
+            logger.error("Lỗi khi gửi thông báo batch grade ({}): {}", type.name(), e.getMessage(), e);
+        }
     }
 
     @Override
     public GradebookDTO getGradebook(Long classModuleId, Long teacherId, Pageable pageable) {
+        validateTeacherPermission(classModuleId, teacherId);
 
         ClassModule classModule = classModuleRepository.findById(classModuleId)
                 .orElseThrow(() -> new ResourceNotFoundException("ClassModule not found"));
-
-        validateTeacherPermission(classModuleId, teacherId);
-
-        List<String> components = gradeRepository.findDistinctComponentNamesByClassModuleId(classModuleId);
 
         Long classId = classModule.getClassEntity().getId();
         Page<ClassMember> studentMemberPage = classMemberRepository.findByClassIdAndRole(
                 classId, ClassMember.Role.sinh_vien, pageable);
 
-        List<User> studentsOnThisPage = studentMemberPage.getContent().stream()
-                .map(ClassMember::getUser)
-                .toList();
-
-        List<Long> studentIdsOnPage = studentsOnThisPage.stream()
-                .map(User::getId)
-                .toList();
+        List<Long> studentIdsOnPage = studentMemberPage.getContent().stream()
+                .map(member -> member.getUser().getId())
+                .collect(Collectors.toList());
 
         List<Grade> gradesForThisPage = (studentIdsOnPage.isEmpty())
                 ? List.of()
-                : gradeRepository.findByClassModuleIdAndStudentIdIn(classModuleId, studentIdsOnPage);
+                : gradeRepository.findByClassModuleIdAndStudentIdInAndStatus(
+                classModuleId, studentIdsOnPage, Grade.Status.ACTIVE);
 
-        Map<Long, Map<String, BigDecimal>> gradesByStudent = gradesForThisPage.stream()
-                .collect(Collectors.groupingBy(
-                        grade -> grade.getStudent().getId(),
-                        Collectors.toMap(Grade::getComponentName, Grade::getScore)
-                ));
+        Map<Long, Grade> gradeMap = gradesForThisPage.stream()
+                .collect(Collectors.toMap(grade -> grade.getStudent().getId(), grade -> grade));
 
         GradebookDTO gradebook = new GradebookDTO();
         gradebook.setClassModuleId(classModuleId);
         gradebook.setClassName(classModule.getClassEntity().getClassName());
         gradebook.setModuleName(classModule.getModule().getName());
-        gradebook.setComponents(components);
+        gradebook.setComponents(List.of("Điểm lý thuyết", "Điểm thực hành"));
 
-        List<GradebookDTO.StudentRow> studentRows = studentsOnThisPage.stream().map(student -> {
-            GradebookDTO.StudentRow row = new GradebookDTO.StudentRow();
+        List<GradebookDTO.StudentGradeRowDTO> studentRows = studentMemberPage.getContent().stream().map(member -> {
+            GradebookDTO.StudentGradeRowDTO row = new GradebookDTO.StudentGradeRowDTO();
+            User student = member.getUser();
             row.setStudentId(student.getId());
             row.setStudentName(student.getFirstName() + " " + student.getLastName());
 
-            Map<String, BigDecimal> studentScores = gradesByStudent.getOrDefault(student.getId(), Map.of());
-            row.setGrades(studentScores);
+            Grade grade = gradeMap.get(student.getId());
+            if (grade != null) {
+                row.setGradeId(grade.getId());
+                row.setTheoryScore(grade.getTheoryScore());
+                row.setPracticeScore(grade.getPracticeScore());
+            }
             return row;
-        }).toList();
+        }).collect(Collectors.toList());
 
         gradebook.setStudents(studentRows);
         gradebook.setCurrentPage(studentMemberPage.getNumber());
@@ -112,178 +215,43 @@ public class GradeServiceImpl implements GradeService {
         return gradebook;
     }
 
-    private void validateStudentMembership(Long classModuleId, Long studentId) {
-
-        ClassModule classModule = classModuleRepository.findById(classModuleId)
-                .orElseThrow(() -> new ResourceNotFoundException("ClassModule not found"));
-
-        Long classId = classModule.getClassEntity().getId();
-
-        Optional<ClassMember> memberOpt = classMemberRepository.findByClassIdAndUserId(classId, studentId);
-
-        if (memberOpt.isEmpty()) {
-            throw new ForbiddenException("Access Denied: Student not found in this class");
-        }
-
-        ClassMember member = memberOpt.get();
-
-        ClassMember.Role vaiTroEnum = member.getRole();
-
-        String vaiTroThucTe = (vaiTroEnum == null) ? "null" : vaiTroEnum.name();
-
-        if (!"sinh_vien".equals(vaiTroThucTe)) {
-            throw new ForbiddenException("Access Denied: User is in this class, but not as a student");
-        }
-    }
-
     @Override
-    public void validateTeacherPermission(Long classModuleId, Long teacherId) {
-        User user = userRepository.findById(teacherId)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + teacherId));
+    public GradeDTO getMyGrades(Long classModuleId, Long studentId) {
+        validateStudentMembership(classModuleId, studentId);
 
-        Set<Role> userRoles = user.getRoles();
-        boolean isAdmin = userRoles.stream()
-                .anyMatch(role -> "ROLE_ADMIN".equals(role.getName()));
+        Grade grade = gradeRepository.findByClassModuleIdAndStudentIdAndStatus(
+                        classModuleId, studentId, Grade.Status.ACTIVE)
+                .orElse(null);
 
-        if (isAdmin) {
-            return;
+        if (grade == null) {
+            throw new ResourceNotFoundException("Bạn chưa có điểm cho môn học này.");
         }
 
-        boolean isTeaching = classModuleTeacherRepository.existsByClassModuleIdAndUserId(classModuleId, teacherId);
-
-        if (!isTeaching) {
-            throw new ForbiddenException("Access Denied: User is not an authorized teacher for this module or an admin");
-        }
+        return new GradeDTO(grade);
     }
-
-    @Override
-    @Transactional
-    public StudentGradeDTO updateGrade(Long gradeId, GradeUpdateDTO dto, User teacher) {
-        Grade grade = gradeRepository.findById(gradeId)
-                .orElseThrow(() -> new ResourceNotFoundException("Grade record not found with id: " + gradeId));
-
-        Long classModuleId = grade.getClassModule().getId();
-        validateTeacherPermission(classModuleId, teacher.getId());
-        BigDecimal oldScore = grade.getScore();
-
-        GradeHistory history = new GradeHistory();
-        history.setGrade(grade);
-        history.setOldScore(oldScore);
-        history.setNewScore(dto.getNewScore());
-        history.setChangeReason(dto.getChangeReason());
-        history.setChangedBy(teacher);
-
-        gradeHistoryRepository.save(history);
-
-        grade.setScore(dto.getNewScore());
-        grade.setEnteredBy(teacher);
-        Grade updatedGrade = gradeRepository.save(grade);
-
-        try {
-            User student = updatedGrade.getStudent();
-            String moduleName = updatedGrade.getClassModule().getModule().getName();
-            String title = "Điểm của bạn đã được cập nhật";
-            String content = String.format(
-                    "Điểm [ %s ] môn [ %s ] của bạn đã được cập nhật thành: %.1f",
-                    updatedGrade.getComponentName(), moduleName, updatedGrade.getScore()
-            );
-
-            notificationService.createNotification(
-                    student.getId(),
-                    teacher.getId(),
-                    Notification.NotificationType.GRADE_UPDATED,
-                    "CLASS_MODULE",
-                    classModuleId,
-                    title,
-                    content
-            );
-        } catch (Exception e) {
-        }
-
-        return new StudentGradeDTO(
-                updatedGrade.getId(),
-                updatedGrade.getComponentName(),
-                updatedGrade.getScore(),
-                updatedGrade.getMaxScore(),
-                updatedGrade.getWeightPercent(),
-                updatedGrade.getUpdatedAt()
-        );
-    }
-
-    @Override
-    @Transactional
-    public StudentGradeDTO createGrade(GradeCreateDTO dto, User teacher) {
-
-        validateTeacherPermission(dto.getClassModuleId(), teacher.getId());
-
-        User student = userRepository.findById(dto.getStudentId())
-                .orElseThrow(() -> new ResourceNotFoundException("Student not found with id: " + dto.getStudentId()));
-
-        ClassModule classModule = classModuleRepository.findById(dto.getClassModuleId())
-                .orElseThrow(() -> new ResourceNotFoundException("ClassModule not found with id: " + dto.getClassModuleId()));
-
-        Grade newGrade = new Grade();
-        newGrade.setStudent(student);
-        newGrade.setClassModule(classModule);
-        newGrade.setComponentName(dto.getComponentName());
-        newGrade.setScore(dto.getScore());
-        newGrade.setMaxScore(dto.getMaxScore());
-        newGrade.setWeightPercent(dto.getWeightPercent());
-        newGrade.setEnteredBy(teacher);
-
-        Grade savedGrade = gradeRepository.save(newGrade);
-
-        try {
-            Long classModuleId = savedGrade.getClassModule().getId();
-            String moduleName = savedGrade.getClassModule().getModule().getName();
-            String title = "Bạn có điểm mới";
-            String content = String.format(
-                    "Bạn có điểm mới [ %s ] môn [ %s ]: %.1f",
-                    savedGrade.getComponentName(), moduleName, savedGrade.getScore()
-            );
-
-            notificationService.createNotification(
-                    student.getId(),
-                    teacher.getId(),
-                    Notification.NotificationType.GRADE_NEW,
-                    "CLASS_MODULE",
-                    classModuleId,
-                    title,
-                    content
-            );
-        } catch (Exception e) {
-        }
-
-        return new StudentGradeDTO(savedGrade.getId(), savedGrade.getComponentName(), savedGrade.getScore(), savedGrade.getMaxScore(), savedGrade.getWeightPercent(), savedGrade.getUpdatedAt());
-    }
-
 
     @Override
     public List<GradeHistoryDTO> getGradeHistory(Long gradeId, User currentUser) {
 
         Grade grade = gradeRepository.findById(gradeId)
-                .orElseThrow(() -> new ResourceNotFoundException("Grade record not found with id: " + gradeId));
+                .orElseThrow(() -> new ResourceNotFoundException("Grade record not found (or deleted): " + gradeId));
 
         boolean isAuthorizedTeacher = false;
         boolean isStudentOwner = false;
 
         try {
-            Long classModuleId = grade.getClassModule().getId();
-            validateTeacherPermission(classModuleId, currentUser.getId());
+            validateTeacherPermission(grade.getClassModule().getId(), currentUser.getId());
             isAuthorizedTeacher = true;
-        } catch (ForbiddenException | ResourceNotFoundException e) {
+        } catch (Exception e) {
             isAuthorizedTeacher = false;
         }
 
         if (!isAuthorizedTeacher) {
-            boolean isSamePerson = grade.getStudent().getId().equals(currentUser.getId());
-
-            if (isSamePerson) {
+            if (grade.getStudent().getId().equals(currentUser.getId())) {
                 try {
-                    Long classModuleId = grade.getClassModule().getId();
-                    validateStudentMembership(classModuleId, currentUser.getId());
+                    validateStudentMembership(grade.getClassModule().getId(), currentUser.getId());
                     isStudentOwner = true;
-                } catch (ForbiddenException | ResourceNotFoundException e) {
+                } catch (Exception e) {
                     isStudentOwner = false;
                 }
             }
@@ -298,5 +266,48 @@ public class GradeServiceImpl implements GradeService {
         return historyList.stream()
                 .map(GradeHistoryDTO::new)
                 .toList();
+    }
+
+    @Override
+    @Transactional
+    public void deleteGrade(Long gradeId, User currentUser) {
+        Grade grade = gradeRepository.findById(gradeId)
+                .orElseThrow(() -> new ResourceNotFoundException("Grade not found: " + gradeId));
+
+        validateTeacherPermission(grade.getClassModule().getId(), currentUser.getId());
+
+        gradeRepository.delete(grade);
+    }
+
+    private void validateStudentMembership(Long classModuleId, Long studentId) {
+        ClassModule classModule = classModuleRepository.findById(classModuleId)
+                .orElseThrow(() -> new ResourceNotFoundException("ClassModule not found"));
+        Long classId = classModule.getClassEntity().getId();
+        Optional<ClassMember> memberOpt = classMemberRepository.findByClassIdAndUserId(classId, studentId);
+        if (memberOpt.isEmpty()) {
+            throw new ForbiddenException("Access Denied: Student not found in this class");
+        }
+        ClassMember member = memberOpt.get();
+        ClassMember.Role vaiTroEnum = member.getRole();
+        String vaiTroThucTe = (vaiTroEnum == null) ? "null" : vaiTroEnum.name();
+        if (!"sinh_vien".equals(vaiTroThucTe)) {
+            throw new ForbiddenException("Access Denied: User is in this class, but not as a student");
+        }
+    }
+
+    @Override
+    public void validateTeacherPermission(Long classModuleId, Long teacherId) {
+        User user = userRepository.findById(teacherId)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + teacherId));
+        Set<Role> userRoles = user.getRoles();
+        boolean isAdmin = userRoles.stream()
+                .anyMatch(role -> "ROLE_ADMIN".equals(role.getName()));
+        if (isAdmin) {
+            return;
+        }
+        boolean isTeaching = classModuleTeacherRepository.existsByClassModuleIdAndUserId(classModuleId, teacherId);
+        if (!isTeaching) {
+            throw new ForbiddenException("Access Denied: User is not an authorized teacher for this module or an admin");
+        }
     }
 }
